Added date in "Schedule"

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
       <div class="bilingual-text">
         <p class="zh">
           香港魁地奇總會自 2023 年起每年舉辦「香港魁地奇盃」作為香港之頂級賽事，由
-          <span class="alnum-target">Hongkong Hydras Quidditch Club</span> 與
-          <span class="alnum-target">Victorian Dragons</span> 角逐冠軍寶座。
+          <span class="alnum-target"><b>Hongkong Hydras Quidditch Club</b></span> 與
+          <span class="alnum-target"><b>Victorian Dragons</b></span> 角逐冠軍寶座。
         </p>
         <p class="en">
           The Hong Kong Quadball Association organises the Hong Kong Quadball Cup as the premier annual tournament since 2023.
           The Cup has been competed by the two quadball clubs in Hong Kong, the
-          <span class="alnum-target">Hongkong Hydras Quidditch Club</span> and
-          <span class="alnum-target">Victorian Dragons</span>.
+          <span class="alnum-target"><b>Hongkong Hydras Quidditch Club</b></span> and
+          <span class="alnum-target"><b>Victorian Dragons</b></span>.
         </p>
       </div>
     </div>
@@ -122,6 +122,14 @@
     <div class="container">
       <h2 class="section-title zh">賽程表</h2>
       <h2 class="section-title en">Schedule</h2>
+      <div class="bilingual-text">
+        <p class="zh">
+          日期：2026年3月8日（星期日）
+        </p>
+        <p class="en">
+          Date: 8 March 2026 (Sun)
+        </p>
+      </div>
       <p class="coming-soon">
         賽程表容後公佈。<br>
         The schedule will be announced in due course.
