--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <div class="hero-actions">
         <a href="#registration" class="btn btn-primary"><span class="zh">查看報名詳情</span><span class="en">Registration</span></a>
-        <a href="#rules-quadball" class="btn btn-secondary"><span class="zh">認識魁地奇運動</span><span class="en">More About Quadball</span></a>
+        <a href="#quadball-intro" class="btn btn-secondary"><span class="zh">認識魁地奇運動</span><span class="en">More About Quadball</span></a>
       </div>
 
       <p class="hero-note zh">
@@ -156,7 +156,7 @@
 	  </section>
 
 <!-- Quadball Rules -->
-	<section id="rules-quadball" class="section">
+	<section id="quadball-intro" class="section">
 		<div class="container">
 			<h2 class="section-title zh">魁地奇運動簡介</h2>
 			<h2 class="section-title en">Introduction to Quadball</h2>
