--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<li><a href="#schedule" class="nav-link en">Schedule</a></li>
       <li><a href="#teams" class="nav-link zh">隊伍</a></li>
 		<li><a href="#teams" class="nav-link en">Teams</a></li>
+	  <li><a href="#format" class="nav-link zh">賽制</a></li>
+		<li><a href="#format" class="nav-link en">Format</a></li>
 	  <li><a href="#quadball-intro" class="nav-link zh">運動簡介</a></li>
 		<li><a href="#quadball-intro" class="nav-link en">About Quadball</a></li>
       <li class="lang-switcher">
@@ -64,11 +66,12 @@
         香港年度魁地奇盛事，集合本地及海外球員，一齊為金探子而戰。
       </p>
       <p class="hero-subtitle en">
-        The annual quadball showcase in Hong Kong, bringing together local and overseas players to compete for the snitch.
+        The annual quadball showcase in Hong Kong, bringing together local and overseas players.
       </p>
 
       <div class="hero-actions">
         <a href="#registration" class="btn btn-primary"><span class="zh">查看報名詳情</span><span class="en">Registration</span></a>
+		<a href="https://www.youtube.com/@hkquadball/live/" class="btn btn-primary" style="display: none"><span class="zh">收睇現場直播</span><span class="en">Watch Live</span></a>
         <a href="#quadball-intro" class="btn btn-secondary"><span class="zh">認識魁地奇運動</span><span class="en">More About Quadball</span></a>
       </div>
 
@@ -98,14 +101,14 @@
 		  <div class="bilingual-text">
 			<p class="zh">
 			  香港魁地奇總會自 2023 年起每年舉辦「香港魁地奇盃」作為香港之頂級賽事，由
-			  <span class="alnum-target"><b>Hongkong Hydras Quidditch Club</b></span> 與
-			  <span class="alnum-target"><b>Victorian Dragons</b></span> 角逐冠軍寶座。
+			  <span class="alnum"><strong>Hongkong Hydras Quidditch Club</strong></span> 與
+			  <span class="alnum"><strong>Victorian Dragons</strong></span> 角逐冠軍寶座。
 			</p>
 			<p class="en">
 			  The Hong Kong Quadball Association organises the Hong Kong Quadball Cup as the premier annual tournament since 2023.
 			  The Cup has been competed by the two quadball clubs in Hong Kong, the
-			  <span class="alnum-target"><b>Hongkong Hydras Quidditch Club</b></span> and
-			  <span class="alnum-target"><b>Victorian Dragons</b></span>.
+			  <strong>Hongkong Hydras Quidditch Club</strong> and
+			  <strong>Victorian Dragons</strong>.
 			</p>
 		  </div>
 		</div>
@@ -114,12 +117,13 @@
 <!-- Registration placeholder -->
 	  <section id="registration" class="section">
 		<div class="container">
-		  <h2 class="section-title zh">報名</h2>
-		  <h2 class="section-title en">Registration</h2>
-		  <p class="coming-soon">
-			<span class="zh">報名詳情將於本週公布，並透過 Google Form 接受報名。</span>
-			<span class="en">Registration will open later this week via Google Form, stay tuned!</span>
-		  </p>
+			<h2 class="section-title zh">報名</h2>
+			<h2 class="section-title en">Registration</h2>
+			<p class="coming-soon">
+				<span class="zh">報名詳情將於本週公佈，並透過 Google Form 接受報名。</span>
+				<span class="en">Registration will open later this week via Google Form, stay tuned!</span>
+			</p>
+			<a href="https://link.hkquidditch.org/playhkqc/" class="btn btn-primary" style="display: none"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
 		</div>
 	  </section>
 
@@ -130,16 +134,16 @@
 		  <h2 class="section-title en">Schedule</h2>
 		  <div class="bilingual-text">
 			<p class="zh" style="text-align: center">
-			  日期：2026年3月8日（星期日）
+			  時間：<span class="alnum">2026</span>年<span class="alnum">3</span>月<span class="alnum">8</span>日（星期日）下午
 			</p>
 			<p class="en" style="text-align: center">
-			  Date: 8 March 2026 (Sun)
+			  Time: Afternoon of 8 March 2026 (Sun)
 			</p>
-		  </div>
 		  <p class="coming-soon">
 			<span class="zh">賽程表容後公佈。</span>
 			<span class="en">The schedule will be announced in due course.</span>
 		  </p>
+		  </div>
 		</div>
 	  </section>
 
@@ -154,6 +158,35 @@
 		  </p>
 		</div>
 	  </section>
+
+<!-- Quadball Rules -->
+	<section id="format" class="section" style="display: ">
+		<div class="container">
+			<h2 class="section-title zh">二零二六年香港魁地奇盃賽制</h2>
+			<h2 class="section-title en">Tournament Format</h2>
+			<p class="coming-soon">
+				<span class="zh">賽制容後公佈。</span>
+				<span class="en">The tournament format will be announced soon.</span>
+			</p>
+			<div class="bilingual-text" style="display: none">
+
+				<p class="zh">
+					參賽隊伍<span class="alnum"><strong>Hongkong Hydras Quidditch Club</strong></span>及<span class="alnum"><strong>Victorian Dragons</strong></span>將對賽兩輪決出冠軍，勝出條件依序為：
+				</p>
+				<p class="en">
+					The teams – <strong>Hongkong Hydras Quidditch Club</strong> and <strong>Victorian Dragons</strong> – will play a
+					two-legged tie. The champion is awarded to the team that has:
+				</p>
+				<ol type="1">
+					<li><span class="zh">最多勝出場數</span><span class="en">A greater number of games won, otherwise;</span>
+					<li><span class="zh">最高累計得分</span><span class="en">A higher cumulative score, otherwise;</span>
+					<li><span class="zh">奪得最多金探子</span><span class="en">A greater number of snitch (flag) catches, otherwise;</span>
+					<li><span class="zh">最快奪得金探子</span><span class="en">Fastest snitch (flag) capture</span>
+				</ol>
+				<a href="https://docs.google.com/document/d/1O5z41hujTO_5ybXy3Izk4PIh3Co5HxDXcZiGhRHn6rM/edit?usp=sharing" class="btn btn-secondary" style="display: none"><span class="zh">《賽事章則》<br>（只提供英文版）</span><span class="en">Tournament Regulations<br>(External Link)</span></a>
+			</div>
+		</div>
+	</section>
 
 <!-- Quadball Rules -->
 	<section id="quadball-intro" class="section">
