Urgent: enable Register button in the section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				</p>
 				
 			</div>
-			<a href="https://link.hkquidditch.org/playhkqc" class="btn btn-primary" style="display: none"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
+			<a href="https://link.hkquidditch.org/playhkqc" class="btn btn-primary"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
 		</div>
 	  </section>
 
