Urgent: Chinese Text corrected

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							</div>
 							<!-- 備註 -->
 							<div class="position-note">
-								<span class="zh">與追蹤手信同，另於禁區內享防守特權</span>
+								<span class="zh">與追蹤手相同，另於禁區內享防守特權</span>
 								<span class="en">Same as Chaser; Enjoys privilege in Keeper Zone</span>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 							</div>
 							<!-- 備註 -->
 							<div class="position-note">
-								<span class="zh">利用閃避球（「博格」）截擊對手，阻礙對方攻勢</span>
+								<span class="zh">利用閃避球（「搏格」）截擊對手，阻礙對方攻勢</span>
 								<span class="en">Stop opponents from advancing using Dodgeball (<i>bludger</i>)</span>
 							</div>
 						</div>
@@ -337,9 +337,9 @@
 						<!-- Dodgeball -->
 						<div class="ball-card dodgeball">
 							<img src="assets/img/Balls-Dodgeball.png" alt="閃避球 Dodgeball" class="ball-icon">
-							<h4 class="position-name zh">閃避球（「博格」）</h4>
+							<h4 class="position-name zh">閃避球（「搏格」）</h4>
 							<h4 class="position-name en">Dodgeball</h4>
-							<span class="count">2×</span>
+							<span class="count">3×</span>
 							<!-- 備註 -->
 							<div class="position-note">
 								<span class="zh">限打擊手使用，擊中對手即時淘汰，須 <strong>觸碰己方球圈</strong> 復活</span>
