--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-HK">
 <head>
-  <meta charset="UTF-8">
-  <title>Hong Kong Quadball Cup 2026 二零二六年香港魁地奇盃</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/hkqc.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-W26MTMWM2C"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-W26MTMWM2C');
+	</script>
+	<meta charset="UTF-8">
+	<title>Hong Kong Quadball Cup 2026 二零二六年香港魁地奇盃</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="assets/hkqc.css">
 </head>
 <body>
 
@@ -39,7 +48,7 @@
 <!-- Hero -->
   <section id="hero">
     <div class="hero-content">
-      <p class="hero-tagline zh"><b>香港魁地奇總會</b> 主辦</p>
+      <p class="hero-tagline zh"><strong>香港魁地奇總會</strong> 主辦</p>
 
       <!-- hero title image -->
       <div class="hero-title">
@@ -48,7 +57,7 @@
           alt="Hong Kong Quadball Cup 2026 二零二六年香港魁地奇盃"
           class="hero-title-img"
         >
-	  <p class="hero-tagline en">Organised by <b>Hong Kong Quadball Association</b></p>
+	  <p class="hero-tagline en">Organised by <strong>Hong Kong Quadball Association</strong></p>
     </div>
 
       <div class="hero-meta">
@@ -196,7 +205,7 @@
 					<li><span class="zh">奪得最多金探子</span><span class="en">A greater number of snitch (flag) catches, otherwise;</span>
 					<li><span class="zh">最快奪得金探子</span><span class="en">Fastest snitch (flag) capture</span>
 				</ol>
-				<a href="https://drive.google.com/file/d/1QKUDcs4zGoivMqrS-YDl_Su-yYP_knRl/view?usp=sharing" class="btn btn-secondary"><span class="zh">《賽事章則》<br>（只提供英文版）</span><span class="en">Tournament Regulations<br>(External Link)</span></a>
+				<a href="https://drive.google.com/file/d/1QKUDcs4zGoivMqrS-YDl_Su-yYP_knRl/view?usp=sharing" class="btn btn-secondary"><span class="zh">《賽事章則》（只提供英文版）</span><span class="en">Tournament Regulations (External Link)</span></a>
 			</div>
 		</div>
 	</section>
@@ -226,15 +235,18 @@
 				<div class="en">
 					<p>
 					  Inspired by the <i>Harry Potter</i> series, quadball is a sport that combines rugby and dodgeball elements.
-					  Each team fields six to seven players across four positions. Teams score 10 points by throwing a volleyball (the "quaffle") through the hoops, and defend or disable opponents using dodgeballs.
-					  After the first 20 minutes, one player from each team attempts to catch the snitch (a weighted flag, which has a tennis ball placed inside a sock attached to an official's waist), scoring 30 points if successful.
+					  Each team fields six to seven players across four positions. Teams score 10 points by throwing a volleyball (the "quaffle")
+					  through the hoops, and defend or disable opponents using dodgeballs.
+					  After the first 20 minutes, one player from each team attempts to catch the snitch
+					  (a weighted flag, which has a tennis ball placed inside a sock attached to an official's waist), scoring 30 points if successful.
 					</p>
 					<p>
 					  Gender inclusivity and equality are fundamental to quadball. Players participate according to their gender identity, competing together on the same field.
 					  No more than four players identifying as the same gender (including male, female, non-binary, or other identities) may be on the field at one time.
 					</p>
 					<p>
-					  In 2022, the International Quadball Association officially renamed the sport "Quadball" to promote its professional development beyond fictional origins, reflecting the four positions and four balls in play.
+					  In 2022, the International Quadball Association officially renamed the sport "Quadball" to promote its professional development beyond fictional origins,
+					  reflecting the four positions and four balls in play.
 					</p>
 				</div>
 			</div>
@@ -376,6 +388,13 @@
 			</div>
 
 			<div class="footer-social">
+			    <img
+				  src="assets/img/HKQA-Logo-w-text-WHITE.png"
+				  alt="Logo of Hong Kong Quadball Association 香港魁地奇總會標誌"
+				  class="footer-logo"
+				>	
+			</div>
+			<div class="footer-social">
 				<div class="social-pill" aria-label="HKQA social links">
 					<a class="social-icon facebook" href="https://www.facebook.com/hkquadball" target="_blank" rel="noopener"
 					   aria-label="HKQA Facebook">
@@ -401,7 +420,7 @@
 					<span class="social-handle">@hkquadball</span>
 				</div>	
 			</div>				
-			<div  class="footer-social">
+			<div class="footer-social">
 				<a href="https://www.hkquidditch.org" target="_blank" rel="noopener" aria-label="HKQA Website" style="color: white">hkquidditch.org</a>
 			</div>
 
