--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="hero-meta">
         <div class="hero-meta-item">
           <span class="label"><span class="zh">日期</span><span class="en">Date</span></span>
-          <span class="value date">8 Mar 2026<span class="zh">（日）</span><span class="en">&nbsp;(Sun)</span></span>
+          <span class="value date"><span class="zh">（容後公佈）</span><span class="en">&nbsp;(To Be Announced)</span></span>
         </div>
         <div class="hero-meta-item">
           <span class="label"><span class="zh">地點</span><span class="en">Venue</span></span>
@@ -80,23 +80,23 @@
 
       <div class="hero-actions">
         <a href="#registration" class="btn btn-primary"><span class="zh">查看報名詳情</span><span class="en">Registration Info</span></a>
-		<a href="https://link.hkquidditch.org/playhkqc/" class="btn btn-primary"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
+		<a href="https://link.hkquidditch.org/playhkqc/" class="btn btn-primary" style="display: none"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
 		<a href="https://www.youtube.com/@hkquadball/live/" class="btn btn-primary" style="display: none"><span class="zh">收睇現場直播</span><span class="en">Watch Live</span></a>
         <a href="#quadball-intro" class="btn btn-secondary"><span class="zh">認識魁地奇運動</span><span class="en">More About Quadball</span></a>
       </div>
 
       <p class="hero-note zh">
-        早鳥優惠名額有限，請即報名！
+        《二零二六年香港魁地奇盃》將延期舉行。最新日期將另行公佈。
       </p>
       <p class="hero-note en">
-        Limited spots available for early bird discount. Sign up NOW!
+        The Hong Kong Quadball Cup 2026 will be postponed. Please stay tuned for a new date.
       </p>
     </div>
 
     <div class="hero-image">
       <img
         src="assets/img/2026KV.png"
-        alt="Four quadball players from Hongkong Hydras in game action"
+        alt="Four quadball players in game action"
         class="hero-kv"
       >
     </div>
@@ -129,25 +129,25 @@
 		<div class="container">
 			<h2 class="section-title zh">報名</h2>
 			<h2 class="section-title en">Registration</h2>
-			<p class="coming-soon" style="display: none">
-				<span class="zh">報名詳情將於本週公佈，並透過 Google Form 接受報名。</span>
-				<span class="en">Registration will open later this week via Google Form, stay tuned!</span>
+			<p class="coming-soon">
+				<span class="zh">《二零二六年香港魁地奇盃》將延期舉行。最新日期將另行公佈。</span>
+				<span class="en">The Hong Kong Quadball Cup 2026 will be postponed. Please stay tuned for a new date.</span>
 			</p>
 			<div class="bilingual-text">
 
 				<p class="zh">
 					報名費用：港幣<span class="alnum"><strong>350</strong></span>元正<strong>（名額有限，正價為港幣400元）</strong><br>
 					<i>首次參賽或轉隊球員須另付球衣費用</i><br>
-					<span class="alnum">2026</span>年<span class="alnum">2</span>月<span class="alnum">21</span>日（六）截止報名。
+					<!--<span class="alnum">2026</span>年<span class="alnum">2</span>月<span class="alnum">21</span>日（六）截止報名。-->
 				</p>
 				<p class="en">
 					HK$<span class="alnum"><strong>350</strong></span> <strong>(Limited quota, $400 thereafter)</strong><br>
 					<i>First time and transfer players are required to pay additional costs for jersey kit</i><br>
-					Registration closes 21 Feb 2026 (Sat).
+					<!--Registration closes 21 Feb 2026 (Sat).-->
 				</p>
 				
 			</div>
-			<a href="https://link.hkquidditch.org/playhkqc" class="btn btn-primary"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
+			<a href="https://link.hkquidditch.org/playhkqc" class="btn btn-primary" style="display: none"><span class="zh">立即報名</span><span class="en">Register Now</span></a>
 		</div>
 	  </section>
 
@@ -157,10 +157,10 @@
 		  <h2 class="section-title zh">賽程表</h2>
 		  <h2 class="section-title en">Schedule</h2>
 		  <div class="bilingual-text">
-			<p class="zh" style="text-align: center">
+			<p class="zh" style="text-align: center" style="display: none">
 			  時間：<span class="alnum">2026</span>年<span class="alnum">3</span>月<span class="alnum">8</span>日（星期日）下午
 			</p>
-			<p class="en" style="text-align: center">
+			<p class="en" style="text-align: center" style="display: none">
 			  Time: Afternoon of 8 March 2026 (Sun)
 			</p>
 		  <p class="coming-soon">
@@ -179,7 +179,7 @@
 
 			<div class="bilingual-text">
 			  <p class="zh">
-				重溫 2025 年香港魁地奇盃精彩時刻，感受比賽氣氛，為今年賽事熱身。
+				重溫<span class="alnum">2025</span>年香港魁地奇盃精彩時刻，感受比賽氣氛，為今年賽事熱身。
 			  </p>
 			  <p class="en">
 				Relive the best moments from the 2025 Hong Kong Quadball Cup
