Minor: Style adjustments

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div id="postpone-modal" class="modal-overlay" role="dialog" aria-labelledby="modal-title" aria-modal="true">
   <div class="modal-box">
     <header class="modal-header">
-      <h3 id="modal-title">重要公告</h3>
-      <h3 id="modal-title-en">Important Notice</h3>
+      <p><h3 id="modal-title">重要公告</h3></p>
+      <p><h3 id="modal-title-en">Important Notice</h3></p>
       <button class="modal-close" aria-label="Close notice">&times;</button>
     </header>
 
