Updated Modal to include availability form

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
     </div>
 
     <footer class="modal-footer">
-      <button class="btn btn-primary modal-dismiss">
+		<a	href="https://link.hkquidditch.org/playhkqc" 
+			class="btn btn-secondary modal-action" 
+			target="_blank" rel="noopener">
+			<span>填寫賽程規劃表格</span><br>
+			<span>Submit Availability</span>
+		</a>
+		<button class="btn btn-primary modal-dismiss">
         <span>收到，繼續瀏覽網頁</span><br>
         <span>Got it, continue to site</span>
       </button>
